@@ -206,6 +206,9 @@ Release 0.23.6 - UNRELEASED
     YARN-258. RM web page UI shows Invalid Date for start and finish times
     (Ravi Prakash via jlowe)
 
+    YARN-266. RM and JHS Web UIs are blank because AppsBlock is not escaping
+    string properly (Ravi Prakash via jlowe)
+
 Release 0.23.5 - UNRELEASED
 
   INCOMPATIBLE CHANGES
